2005-07-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* zlib: Updated to version 1.2.3.

2005-07-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (DisplayImages): Don't invoke
	XrmDestroyDatabase() to destroy the resource database associated
	with the display since it seems that XCloseDisplay() does this for
	us and the X.org server doesn't properly keep track of the
	resource allocation.
	* magick/command.c (DisplayImageCommand): Ditto for
	XrmDestroyDatabase().

2005-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (readdir): Fix write beyond buffer length
	reported in SourceForge issue #1182003.  Only impacts Windows.

2005-05-16  Tavis Ormandy <taviso@gentoo.org>

	* coders/xwd.c (ReadXWDImage): Fix for infinite loop in the xwd
	decoder when calculating the shift r/g/b values and the mask is
	set to zero.

2005-05-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh (PACKAGE_VERSION): Release version 1.1.6.
	* wand/pixel_wand.c (PixelSetYellowQuantum): Wrong PixelPacket
	member was being set.  Thanks to Cristy for the heads-up.
	* magick/image.c (SetImageType): Revert change from 2005-03-12.
	Some coders require that when the image is set to Bilevel type,
	that it be PseudoClass.

2005-04-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): Apply the convolve fixes that
	Glenn committed to CVS head.
	* utilities/Makefile.am (check): Add a convolution parameter so
	that the convolve demo actually does something.

2004-04-24  Glenn Randers-Pehrson <glennrp@glennrp.com>

	* coders/pnm.c: Defend against malevolent pnm "P7" files that
	try to set the colormap length < 256.  Bugfix from Cristy.

2005-04-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS: Added latest news.

2005-04-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (XDelay): Prefer use of select() over poll()