@@ -21,6 +21,17 @@
 </tr>
 </table>
 <p>
+2005-07-27  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/jp2.c: Change how Jasper is intialized.  Hopefully
+        eliminate memory leak when reading ICC color profile.
+  <LI> magick/utility.c (SystemCommand): Always report command error
+        information if a command fails.
+  <LI> Fix some compilation warnings produced by a 64-bit build.
+
+</UL>
+<p>
 2005-07-26  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
